# internal/handlers/health_handler.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"net/http"
 
+	"github.com/Adisey/car-rental-api/internal/api_models"
 	"github.com/Adisey/car-rental-api/internal/db"
 )
 
@@ -11,10 +12,10 @@ func Health(w http.ResponseWriter, r *http.Request) {
 	if err := db.CheckHealth(r.Context()); err != nil {
 		w.WriteHeader(http.StatusServiceUnavailable)
 
-		_ = json.NewEncoder(w).Encode(map[string]string{
-			"status":   "error",
-			"version":  "1.0.6",
-			"database": "failed",
+		_ = json.NewEncoder(w).Encode(api_models.HealthResponse{
+			Status:   "ok",
+			Version:  "1.0.6",
+			Database: "ok",
 		})
 
 		return
@@ -22,9 +23,9 @@ func Health(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 
-	_ = json.NewEncoder(w).Encode(map[string]string{
-		"status":   "ok",
-		"version":  "1.0.6",
-		"database": "ok",
+	_ = json.NewEncoder(w).Encode(api_models.HealthResponse{
+		Status:   "ok",
+		Version:  "1.0.6",
+		Database: "ok",
 	})
 }
